--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
        {% if result %}
 		<div class="card bg-dark" style="width: 18rem;">
-		  <img src="C:\\Users\\Asus\\Desktop\\crop-recommendation-system-based-on-machine-learning-using-python-master\\crop-recommendation-system-based-on-machine-learning-using-python-master\\static\\images\\crop_background.jpg">
+		  <img src="https://iili.io/dK82mx9.jpg">
 		  <div class="card-body">
 			<h5 class="card-title">Recommend Crop for cultivation is:</h5>
 			<p class="card-text">{{ result }}</p>
